force-app/main/default/objects/JSON_Generator_Setting__mdt/JSON_Generator_Setting__mdt.object-meta.xml
<CustomObject>
    <label>JSON Generator Setting</label>
    <pluralLabel>JSON Generator Settings</pluralLabel>
</CustomObject>