force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/Add_if_Null__c.field-meta.xml
<CustomField>
    <fullName>Add_if_Null__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Include in JSON if value is null.</description>
    <label>Add if Null</label>
    <type>Checkbox</type>
</CustomField>