force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/JSON_Element_Type__c.field-meta.xml
<CustomField>
    <fullName>JSON_Element_Type__c</fullName>
    <description>Value Element type.</description>
    <label>JSON Element Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Map</fullName>
                <default>true</default>
                <label>Map</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>MapValueElement</fullName>
            </value>
            <value>
                <fullName>ListValueElement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>