force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/JSON_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_Field_Name__c</fullName>
    <description>JSON field name to be included in JSON</description>
    <label>JSON Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>