force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique identifier in JSON Setting Name group to identify parent record.</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>