force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/Parent_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Key__c</fullName>
    <description>Specify parent unique identifier to maintain JSON hierarchy.</description>
    <label>Parent Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>