force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/Setting_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Setting_Group_Name__c</fullName>
    <description>It is used to identify the group of setting records belongs to same JSON request.</description>
    <inlineHelpText>It is used to identify the group of setting records belongs to same JSON request.</inlineHelpText>
    <label>Setting Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>