force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/SObject_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Field_API_Name__c</fullName>
    <description>Provide salesforce object field api name from base Sobject.</description>
    <label>SObject Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>