force-app/main/default/objects/JSON_Generator_Setting__mdt/fields/Value_Default__c.field-meta.xml
<CustomField>
    <fullName>Value_Default__c</fullName>
    <description>Incase you want to hard-code default value.</description>
    <label>Value - Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>